fix ipsrs)